# elabftwcontrol

./: LICENSE  Makefile  README.md  flake.nix  pyproject.toml  shell.nix
.github/workflows/: build.yml  publish.yml  runtests.yml
src/elabftwcontrol/: __init__.py  _logging.py  cli.py  client.py  configure.py  defaults.py  global_config.py  models.py  s3_utils.py  testing_utils.py  types.py  utils.py
src/elabftwcontrol/core/: interfaces.py  manifests.py  metadata.py  models.py  parsers.py  transformers.py
src/elabftwcontrol/download/: __init__.py  api.py  interfaces.py  metadata.py  output.py  transformers.py  utils.py
src/elabftwcontrol/upload/: api.py  diff.py  graph.py  jobs.py  manifests.py  parsers.py  planning.py  state.py
tests/unit/elabftwcontrol/: test_models.py  test_s3_utils.py  test_utils.py
tests/unit/elabftwcontrol/core/: test_manifests.py  test_metadata.py  test_models.py  test_parsers.py  test_transformers.py
tests/unit/elabftwcontrol/download/: test_metadata.py  test_output.py  test_transformers.py
tests/unit/elabftwcontrol/upload/: test_manifests.py
